--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: CohortDiagnostics
 Type: Package
-Title: Diagnostics for OHDSI Cohorts
+Title: CohortDiagnostics 2.2.1 modified by UMC
 Version: 2.2.1
 Date: 2021-11-13
 Authors@R: c(
@@ -32,7 +32,8 @@ Imports:
   SqlRender (>= 1.7.0),
   stringr,
   tidyr (>= 1.0.0),
-  CohortGenerator (>= 0.2.0)
+  CohortGenerator (>= 0.2.0),
+  rprojroot
 Suggests:
   CirceR,
   DT,
