fixing different testsets, implementing 3 TARs option

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(getResultsDataModelSpecifications_mod)
 export(getTimeDistributions)
 export(getVisitContext)
 export(getVocabularyVersion)
+export(get_tar_options)
 export(instantiateCohortSet)
 export(instantiateUniqueConceptSets)
 export(isTaskRequired)
