batching, reducing DEC list to 20 combinations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(createResultsDataModel)
 export(createTempInclusionStatsTables)
 export(deleteAllRecordsForDatabaseId)
 export(deleteFromServer)
+export(divide_csv_output_by_DEC)
 export(enforceMinCellValue)
 export(ensure_installed)
 export(executeChronograph)
@@ -64,6 +65,7 @@ export(launchDiagnosticsExplorer)
 export(launchDiagnosticsExplorerOutsidePackage)
 export(loadCohortsFromCsvOutsidePackage)
 export(loadCohortsFromPackage)
+export(loadCsvIntoPostGreSQL)
 export(mergeTempTables)
 export(naToEmpty)
 export(naToZero)
